--- a/app/src/main/res/drawable/edittext_login_bkg.xml
+++ b/app/src/main/res/drawable/edittext_login_bkg.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#C5C5C5"/>
-            <corners android:radius="10dp"/>
-            <stroke android:color="@color/green" android:width="1dp"/>
+            <solid android:color="#FFFF"/>
+            <corners android:radius="20dp"/>
+            <stroke android:color="@color/green" android:width="2dp"/>
         </shape>
     </item>
 </selector>
