--- a/app/src/main/res/layout/fragment_cruza__ganado.xml
+++ b/app/src/main/res/layout/fragment_cruza__ganado.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Cruza_Ganado">
+    tools:context=".animales.Cruza_Ganado">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
