--- a/app/src/main/res/layout/fragment_mensajes.xml
+++ b/app/src/main/res/layout/fragment_mensajes.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".MensajesFragment">
+    tools:context=".fragments.MensajesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
