--- a/app/src/main/res/layout/fragment_animales.xml
+++ b/app/src/main/res/layout/fragment_animales.xml
@@ -6,130 +6,12 @@
     android:background="@color/white"
     tools:context=".fragments.AnimalesFragment">
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/To_Busqueda_Ganado"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:clickable="true"
-                android:src="@drawable/busqueda_ganado"/>
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-
-            <ImageView
-                android:id="@+id/To_Seguimiento_Ganado"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="30dp"
-                android:clickable="true"
-                android:src="@drawable/seguimiento_ganado"/>
-
-
-        </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="97dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="30dp"
-            android:gravity="center"
-            android:text="Busqueda" />
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <TextView
-            android:layout_width="97dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:gravity="center"
-            android:text="Seguimiento" />
-
-    </LinearLayout>
-
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="120dp"/>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/To_Cruza"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:clickable="true"
-                android:src="@drawable/cruza"/>
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-
-            <ImageView
-                android:id="@+id/To_Historial_Ganado"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="30dp"
-                android:clickable="true"
-                android:src="@drawable/historial"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="97dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="30dp"
-                android:gravity="center"
-                android:text="Cruza" />
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="97dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="30dp"
-                android:gravity="center"
-                android:text="Historial" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
+        android:text="Animales"
+        android:gravity="center"
+        android:textColor="@color/green"
+        android:textSize="36dp"/>
 
 </FrameLayout>
