--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,58 +7,12 @@
     android:background="@color/white"
     tools:context=".fragments.HomeFragment">
 
-
-
-    <ScrollView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="55dp"
-            android:orientation="vertical"
-            android:gravity="center">
-
-
-
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp">
-
-                <ImageView
-                    android:id="@+id/To_Ajustes"
-                    android:layout_width="54dp"
-                    android:layout_height="54dp"
-                    android:layout_marginRight="230dp"
-                    android:src="@drawable/engranaje"
-                    android:clickable="true"
-                    android:layout_gravity="start" />
-
-                <ImageView
-                    android:id="@+id/To_Perfil"
-                    android:layout_width="54dp"
-                    android:layout_height="54dp"
-                    android:layout_gravity="end"
-                    android:src="@drawable/usu2" />
-
-            </LinearLayout>
-
-
-
-        </LinearLayout>
-
-
-    </ScrollView>
-
+        android:layout_height="match_parent"
+        android:text="Home"
+        android:gravity="center"
+        android:textColor="@color/green"
+        android:textSize="36dp"/>
 
 </FrameLayout>
