--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -13,38 +13,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="75dp"
             android:gravity="center"
             android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp">
-
-                <ImageView
-                    android:id="@+id/To_Home"
-                    android:layout_width="54dp"
-                    android:layout_height="54dp"
-                    android:layout_marginRight="230dp"
-                    android:src="@drawable/hogar"
-                    android:clickable="true"
-                    android:visibility="invisible"
-                    android:layout_gravity="start" />
-
-                <ImageView
-                    android:id="@+id/To_Ajustes"
-                    android:layout_width="54dp"
-                    android:layout_height="54dp"
-                    android:layout_gravity="end"
-                    android:src="@drawable/engranaje" />
-
-            </LinearLayout>
-
-
 
             <TextView
                 android:layout_width="wrap_content"
@@ -59,7 +30,7 @@
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="100dp"
-                android:src="@drawable/baseline_person_pin_24"></ImageView>
+                android:src="@drawable/baseline_person_pin_24"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="wrap_content"
