--- a/app/src/main/res/menu/bottom_menu_2.xml
+++ b/app/src/main/res/menu/bottom_menu_2.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/bottom_home"
-        android:title="Home"
+        android:id="@+id/bottom_home2"
+        android:title="Home2"
         android:icon="@drawable/hogar"/>
 
 </menu>
